--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@metaplex-foundation/js": "^0.19.4",
     "@metaplex-foundation/mpl-token-metadata": "^2.9.1",
+    "@openbook-dex/openbook": "^0.0.9",
     "@project-serum/anchor": "^0.19.1-beta.1",
     "@project-serum/serum": "^0.13.65",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.47",
@@ -24,6 +25,7 @@
     "@solana/web3.js": "^1.89.0",
     "@types/bn.js": "^5.1.5",
     "bn.js": "^5.2.1",
+    "fs": "^0.0.1-security",
     "next": "14.0.3",
     "nextjs-cors": "^2.2.0",
     "react": "^18",
